--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,20 @@ body {
   font-family: "Arial", sans-serif;
 }
 @layer utilities {
-  .neon-text {
-    text-shadow: 0px 0px 5px currentColor, 0px 0px 10px currentColor;
+  .neon-text-auth {
+    text-shadow: 0 0 5px currentColor, 0 0 4px currentColor,
+      0 0 1px rgba(255, 255, 255, 0.3);
+    animation: neonGlow 1.5s infinite alternate;
+  }
+
+  @keyframes neonGlow {
+    0% {
+      text-shadow: 0 0 1px currentColor, 0 0 2px currentColor,
+        0 0 12px rgba(255, 255, 255, 0.2);
+    }
+    100% {
+      text-shadow: 0 0 2px currentColor, 0 0 5px currentColor,
+        0 0 22px rgba(255, 255, 255, 0.5);
+    }
   }
 }
