signup and login page

--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,25 @@ body {
         0 0 22px rgba(255, 255, 255, 0.5);
     }
   }
+  @keyframes borderAnimation {
+    0% {
+      border-color: red blue orange teal;
+    }
+    25% {
+      border-color: blue orange teal red;
+    }
+    50% {
+      border-color: orange teal red blue;
+    }
+    75% {
+      border-color: teal red blue orange;
+    }
+    100% {
+      border-color: red blue orange teal;
+    }
+  }
+
+  .animate-border {
+    animation: borderAnimation 4s infinite linear;
+  }
 }
